# bitbucket_repository_manager

./: .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  Dockerfile  FAQ-es.md  FAQ.md  README.md  SIGNATURE.md  install.sh  publish.sh  pyproject.toml  replit.md  repository_manager.py  run.sh
.github/workflows/: ci.yml
Formula/: bitbucket-manager.rb
src/bbm/: __main__.py  api.py  archiving.py  cli.py  config.py  deps.py  migration.py  permissions.py  pr_approval.py  tui.py
src/bbm/tui/: __init__.py  archive_screen.py  dashboard_screen.py  deps_screen.py  explorer.py  home.py  migration_screen.py  permissions_screen.py  pr_screen.py  splash.py  styles.tcss
src/bitbucket_manager/: __main__.py  api.py  config.py  version.py
src/bitbucket_manager/tui/: __init__.py  archive_screen.py  dashboard_screen.py  deps_screen.py  explorer.py  groups_screen.py  home.py  members_screen.py  migration_screen.py  permissions_screen.py  pr_screen.py  setup_screen.py  splash.py  styles.tcss  widgets.py
