[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-manager"
version = "0.4.3"
description = "Bitbucket Repository Manager — TUI para administración de Bitbucket Cloud"
readme = "README.md"
authors = [{name = "Alan Stefanov", email = "alan.emanuel.stefanov@gmail.com"}]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "requests",
    "pyyaml",
]
keywords = ["bitbucket", "cli", "tui", "devops", "repository-manager", "group-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/AlanStefanov/bitbucket-manager"
Repository = "https://github.com/AlanStefanov/bitbucket-manager"
Issues = "https://github.com/AlanStefanov/bitbucket-manager/issues"

[project.scripts]
bitbucket-manager = "bitbucket_manager.tui:run_tui"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bitbucket_manager*"]

[tool.setuptools.package-data]
bitbucket_manager = ["tui/*.tcss", "py.typed"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/bitbucket_manager/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}"
major_on_zero = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(", "docs\\(", "style\\("]
